added some Apple TV backgrounds

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Do Nothing</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <p id="timer">2:00</p>
+
+  <div class="container">
+    <div class="overlay-container">
+      <div class="timer overlay">2:00</div>
+    </div>
+    <video class="video" width="3840" autoplay muted>
+      <source src="https://sylvan.apple.com/Aerials/2x/Videos/comp_CH_C007_C011_PSNK_v02_SDR_PS_FINAL_20180709_SDR_4K_HEVC.mov" type="video/mp4">
+    </video>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
